# turtlebot_nav_manip

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh  (+1 more)
src_my_object_recognition/pr2/pr2_tc_gazebo/: CMakeLists.txt  package.xml
src_my_object_recognition/pr2/pr2_tc_gazebo/launch/: main.launch  main_elephant_person.launch  main_gun.launch  world.launch
src_my_object_recognition/pr2/pr2_tc_gazebo/models/bobeye/: model.config  model.sdf
src_my_object_recognition/pr2/pr2_tc_gazebo/models/bobeye/meshes/: bobeye.dae  bobeyev2.dae
src_my_object_recognition/pr2/pr2_tc_gazebo/models/elephant/: model.config  model.sdf
src_my_object_recognition/pr2/pr2_tc_gazebo/models/elephant/meshes/: elefant_tusks.stl
src_my_object_recognition/pr2/pr2_tc_gazebo/models/meshes/: sphere_black_white2.dae
src_my_object_recognition/pr2/pr2_tc_gazebo/models/my_gurdy_description/: package.xml
src_my_object_recognition/pr2/pr2_tc_gazebo/models/my_gurdy_description/launch/: gurdy_control.launch
src_my_object_recognition/pr2/pr2_tc_gazebo/models/my_gurdy_description/src/: move_gurdy.py
src_my_object_recognition/pr2/pr2_tc_gazebo/models/my_mira_description/: CMakeLists.txt
src_my_object_recognition/pr2/pr2_tc_gazebo/models/naokoeye/: model.config  model.sdf
src_my_object_recognition/pr2/pr2_tc_gazebo/models/shelf/meshes/: shelf.dae
src_my_object_recognition/pr2/pr2_tc_gazebo/worlds/: dinner_table_butter.world  empty.world  gun.world  person_and_elephant.world
src_my_object_recognition/yolo_tc/gb_visual_detection_3d_msgs/: CMakeLists.txt  README.md  package.xml
(+212 files in other folders)
